# gdbus-template

./: .clang-format  CMakeLists.txt  README.md  meson.build
.github/workflows/: cmake-single-platform.yml  meson-build.yml
example/: CMakeLists.txt  main.c  meson.build
introspect/: CMakeLists.txt  meson.build  org.gnome.Joe.xml
utils/: command.sh
